--- a/2player-combat/Base.lproj/Main.storyboard
+++ b/2player-combat/Base.lproj/Main.storyboard
@@ -17,15 +17,171 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="bg" translatesAutoresizingMaskIntoConstraints="NO" id="xER-et-gUS">
+                            <imageView userInteractionEnabled="NO" contentMode="bottom" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg" translatesAutoresizingMaskIntoConstraints="NO" id="xER-et-gUS">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                             </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="ground" translatesAutoresizingMaskIntoConstraints="NO" id="ja6-Bc-Ti5">
-                                <rect key="frame" x="0.0" y="519" width="600" height="81"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="ground" translatesAutoresizingMaskIntoConstraints="NO" id="ja6-Bc-Ti5">
+                                <rect key="frame" x="0.0" y="498" width="600" height="102"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="60" id="V3G-Nk-RS8"/>
+                                </constraints>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="V3G-Nk-RS8"/>
+                                    </mask>
+                                </variation>
                             </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="text-holder" translatesAutoresizingMaskIntoConstraints="NO" id="L83-1p-BMQ">
+                                <rect key="frame" x="68" y="514" width="465" height="70"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="465" id="7RR-mm-hQz"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="465" id="DYM-PB-DSA"/>
+                                    <constraint firstAttribute="height" constant="70" id="Rg2-62-pZ8"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="70" id="Vp2-kJ-ueD"/>
+                                </constraints>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="player-1" translatesAutoresizingMaskIntoConstraints="NO" id="t8a-IE-b0o" userLabel="character 1">
+                                <rect key="frame" x="33" y="261" width="223" height="237"/>
+                                <rect key="contentStretch" x="0.0" y="0.0" width="0.0" height="1"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="307" id="YCz-UR-xng"/>
+                                    <constraint firstAttribute="height" constant="237" id="bRt-0i-5hm"/>
+                                    <constraint firstAttribute="height" constant="325" id="hEE-EZ-cQ2"/>
+                                    <constraint firstAttribute="width" constant="223" id="iAd-tY-UmP"/>
+                                </constraints>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="YCz-UR-xng"/>
+                                        <exclude reference="hEE-EZ-cQ2"/>
+                                    </mask>
+                                </variation>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="player-2" translatesAutoresizingMaskIntoConstraints="NO" id="Orn-SI-aBX" userLabel="character 2">
+                                <rect key="frame" x="345" y="261" width="223" height="237"/>
+                                <rect key="contentStretch" x="0.0" y="0.0" width="0.0" height="1"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="237" id="7V1-N8-vwZ"/>
+                                    <constraint firstAttribute="height" constant="325" id="QMz-KI-awS"/>
+                                    <constraint firstAttribute="width" constant="307" id="Sh0-y6-nfK"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="223" id="TR7-rT-wDo"/>
+                                    <constraint firstAttribute="height" constant="237" id="dr4-GA-otM"/>
+                                    <constraint firstAttribute="width" constant="223" id="k5O-32-O8n"/>
+                                </constraints>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="QMz-KI-awS"/>
+                                        <exclude reference="Sh0-y6-nfK"/>
+                                    </mask>
+                                </variation>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleAspectFit" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Pl6-zo-1HK">
+                                <rect key="frame" x="52" y="416" width="185" height="61"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="185" id="7eF-hT-ys9"/>
+                                    <constraint firstAttribute="height" constant="61" id="LaW-EN-kBg"/>
+                                    <constraint firstAttribute="width" constant="216" id="QXx-6h-q78"/>
+                                    <constraint firstAttribute="height" constant="72" id="TUF-yT-p5F"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Cochin-Bold" family="Cochin" pointSize="18"/>
+                                <state key="normal" title="Choose Hero" backgroundImage="player1attackbtn">
+                                    <color key="titleColor" red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="QXx-6h-q78"/>
+                                        <exclude reference="TUF-yT-p5F"/>
+                                    </mask>
+                                </variation>
+                                <connections>
+                                    <action selector="chooseHeroClick:" destination="BYZ-38-t0r" eventType="touchUpInside" id="5iL-2o-It9"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleAspectFit" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VNi-n4-AjW">
+                                <rect key="frame" x="364" y="416" width="185" height="61"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="61" id="5eB-zP-L9m"/>
+                                    <constraint firstAttribute="width" constant="185" id="B2c-AR-7Ug"/>
+                                    <constraint firstAttribute="width" constant="216" id="hka-ih-hon"/>
+                                    <constraint firstAttribute="height" constant="72" id="uiZ-vi-Lcr"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Cochin-Bold" family="Cochin" pointSize="18"/>
+                                <state key="normal" title="Choose Enemy" backgroundImage="player1attackbtn">
+                                    <color key="titleColor" red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="hka-ih-hon"/>
+                                        <exclude reference="uiZ-vi-Lcr"/>
+                                    </mask>
+                                </variation>
+                                <connections>
+                                    <action selector="chooseEnemyClick:" destination="BYZ-38-t0r" eventType="touchUpInside" id="8Wl-Ck-PLq"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Player 1 Choose Character" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YCj-F8-iiq" userLabel="mainLbl">
+                                <rect key="frame" x="89" y="538" width="423" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="TKs-ef-rhn"/>
+                                    <constraint firstAttribute="width" constant="423" id="dyv-6X-4NJ"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="L83-1p-BMQ" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="68" id="3CI-N3-8H6"/>
+                            <constraint firstItem="Pl6-zo-1HK" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="20" id="4To-i5-ngd"/>
+                            <constraint firstAttribute="trailing" secondItem="xER-et-gUS" secondAttribute="trailing" id="85d-1h-bHe"/>
+                            <constraint firstItem="VNi-n4-AjW" firstAttribute="centerX" secondItem="Orn-SI-aBX" secondAttribute="centerX" id="85y-5d-1gh"/>
+                            <constraint firstItem="ja6-Bc-Ti5" firstAttribute="top" secondItem="VNi-n4-AjW" secondAttribute="bottom" constant="21" id="8Qe-bH-qnt"/>
+                            <constraint firstAttribute="trailing" secondItem="ja6-Bc-Ti5" secondAttribute="trailing" id="Cco-Gz-5ze"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="ja6-Bc-Ti5" secondAttribute="bottom" id="DXf-Pv-amn"/>
+                            <constraint firstItem="ja6-Bc-Ti5" firstAttribute="top" secondItem="VNi-n4-AjW" secondAttribute="bottom" constant="21" id="Doh-pK-Wai"/>
+                            <constraint firstItem="t8a-IE-b0o" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="I0j-i9-1su"/>
+                            <constraint firstItem="ja6-Bc-Ti5" firstAttribute="top" secondItem="t8a-IE-b0o" secondAttribute="bottom" id="Jc0-QG-glP"/>
+                            <constraint firstItem="t8a-IE-b0o" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="33" id="Juz-8o-A2g"/>
+                            <constraint firstAttribute="trailing" secondItem="L83-1p-BMQ" secondAttribute="trailing" constant="67" id="K6a-hO-F3z"/>
+                            <constraint firstAttribute="trailing" secondItem="VNi-n4-AjW" secondAttribute="trailing" constant="20" id="N88-GP-ahY"/>
+                            <constraint firstItem="ja6-Bc-Ti5" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="NzM-uM-HgN"/>
+                            <constraint firstItem="t8a-IE-b0o" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="Tii-6Z-A28"/>
+                            <constraint firstItem="t8a-IE-b0o" firstAttribute="top" secondItem="Pl6-zo-1HK" secondAttribute="bottom" constant="8" id="V8v-ZI-DB8"/>
+                            <constraint firstItem="YCj-F8-iiq" firstAttribute="centerX" secondItem="L83-1p-BMQ" secondAttribute="centerX" id="VaK-ns-lp3"/>
+                            <constraint firstItem="ja6-Bc-Ti5" firstAttribute="top" secondItem="Orn-SI-aBX" secondAttribute="bottom" id="Wrr-Iy-wUf"/>
+                            <constraint firstItem="ja6-Bc-Ti5" firstAttribute="top" secondItem="Pl6-zo-1HK" secondAttribute="bottom" constant="21" id="ci1-Wf-umj"/>
+                            <constraint firstItem="YCj-F8-iiq" firstAttribute="centerY" secondItem="L83-1p-BMQ" secondAttribute="centerY" id="fcM-Ey-ATl"/>
+                            <constraint firstItem="xER-et-gUS" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="lja-D2-ecJ"/>
+                            <constraint firstItem="Pl6-zo-1HK" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="20" id="moJ-iL-VlF"/>
+                            <constraint firstItem="Pl6-zo-1HK" firstAttribute="centerX" secondItem="t8a-IE-b0o" secondAttribute="centerX" id="ms0-Vh-jgv"/>
+                            <constraint firstItem="ja6-Bc-Ti5" firstAttribute="top" secondItem="Pl6-zo-1HK" secondAttribute="bottom" constant="20" id="nWy-Aj-Y2k"/>
+                            <constraint firstItem="ja6-Bc-Ti5" firstAttribute="top" secondItem="t8a-IE-b0o" secondAttribute="bottom" id="ndO-2V-9Fv"/>
+                            <constraint firstItem="xER-et-gUS" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="pPu-xR-gDM"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="L83-1p-BMQ" secondAttribute="bottom" constant="16" id="saG-bV-jFt"/>
+                            <constraint firstAttribute="trailing" secondItem="Orn-SI-aBX" secondAttribute="trailing" constant="32" id="tQg-bO-azG"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="xER-et-gUS" secondAttribute="bottom" id="urc-0I-fYq"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="I0j-i9-1su"/>
+                                <exclude reference="Tii-6Z-A28"/>
+                                <exclude reference="V8v-ZI-DB8"/>
+                                <exclude reference="4To-i5-ngd"/>
+                                <exclude reference="moJ-iL-VlF"/>
+                                <exclude reference="Doh-pK-Wai"/>
+                                <exclude reference="Jc0-QG-glP"/>
+                                <exclude reference="nWy-Aj-Y2k"/>
+                                <exclude reference="N88-GP-ahY"/>
+                            </mask>
+                        </variation>
                     </view>
+                    <connections>
+                        <outlet property="character1" destination="t8a-IE-b0o" id="EnX-vD-XSe"/>
+                        <outlet property="character2" destination="Orn-SI-aBX" id="d0h-sX-OZy"/>
+                        <outlet property="chooseEnemyBtn" destination="VNi-n4-AjW" id="zp8-ae-Gel"/>
+                        <outlet property="chooseHeroBtn" destination="Pl6-zo-1HK" id="u86-lt-v7C"/>
+                        <outlet property="mainLbl" destination="YCj-F8-iiq" id="xTH-EI-xJl"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
@@ -35,5 +191,9 @@
     <resources>
         <image name="bg" width="1024" height="677"/>
         <image name="ground" width="1024" height="106"/>
+        <image name="player-1" width="406" height="441"/>
+        <image name="player-2" width="406" height="441"/>
+        <image name="player1attackbtn" width="212" height="78"/>
+        <image name="text-holder" width="696" height="106"/>
     </resources>
 </document>
